# computer-graphics

./: .gitignore  CMakeLists.txt  calc.ipynb
include/: App.h  Vertices.h
include/gfx/: Shader.h
src/: App.cpp  Main.cpp
src/gfx/: Shader.cpp
